# learn_rust

./: .editorconfig  .gitignore  404.html  Cargo.toml  README.md  build.rs  hello.html
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  lib.rs  main.rs  render_gl.rs  resources.rs  triangle.rs  triangle.vert
src/render_gl/: buffer.rs  data.rs  mod.rs  viewport.rs
