[package]
name = "learn_rust"
version = "0.1.0"
authors = ["whoisfpc <wo_fpc@outlook.com>"]

[dependencies]
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
failure = "0.1.3"
render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.16"

[build-dependencies]
walkdir = "2.2.6"

[features]
gl_debug = ["gl/debug"]
